# COVID-19-SL

./: .gitignore  CNAME  LICENSE.txt  README.md  SL_district_data.js  SL_district_data.ods  analysis.html  district_data_to_json.m  index.html  main_covid19_20200319.m  model.js  optimizer.js  prediction_history.js  simulator.js  styles.css  test.txt  update_dataset.sh  update_vaccine_data.py  visualization.js  world_data.js  world_population.js  world_vaccine_data.js
C++/: .gitignore  CMakeLists.txt  run_parallel.sh
C++/CMakeInclude/: CompileFlags.cmake  FindNLOPT.cmake  ForceOutOfSource.cmake
C++/src/: CMakeLists.txt  CovidOpt.cpp  CovidOptFull.cpp  CovidOptGlobalBasis.cpp  CovidOptLowDim.cpp  CovidOptPiecewise.cpp  CovidOptPiecewise2Layer.cpp  CovidOptPiecewise4Layer.cpp  CovidOptPiecewiseLinear.cpp  CovidSim.cpp  CovidSim.h  ErrorHandler.h  LinearAlgebra.h  ModelParams.cpp  ModelParams.h  Optimization.cpp  Optimization.h  Optimizer.cpp  Optimizer.h  OptimizerFull.cpp  OptimizerFull.h  OptimizerFunctional.cpp  OptimizerFunctional.h  OptimizerGlobalBasis.cpp  OptimizerGlobalBasis.h  OptimizerPiecewise.cpp  OptimizerPiecewise.h  OptimizerPiecewiseLinear.cpp  OptimizerPiecewiseLinear.h  Population.cpp  Population.h  Simulator.cpp  Simulator.h  SurrealS.h
C++/src/linearalgebra/: CMakeLists.txt  Matrix.cpp  Matrix.h  Vector.h
C++/src/models/: CMakeLists.txt  ModelParams.cpp  ModelParams.h  ModelParams2Layer.cpp  ModelParams2Layer.h  ModelParams4Layer.cpp  ModelParams4Layer.h  ObservedPopulation.cpp  ObservedPopulation.h  Population.cpp  Population.h  Population2Layer.cpp  Population2Layer.h  Population4Layer.cpp  Population4Layer.h  Simulator.cpp  Simulator.h
C++/src/optimizers/: CMakeLists.txt  Optimization.cpp  Optimization.h  OptimizerFull.cpp  OptimizerFull.h  OptimizerGlobalBasis.cpp  OptimizerGlobalBasis.h  OptimizerPiecewise.cpp  OptimizerPiecewise.h  OptimizerPiecewise2Layer.cpp  OptimizerPiecewise2Layer.h  OptimizerPiecewise4Layer.cpp  OptimizerPiecewise4Layer.h
C++/src/utils/: CMakeLists.txt  ErrorHandler.h
dashboard/: countries.js  data_SL.txt  index.html  model.js  optimizer.js  plot_data.js  simulator.js  styles.css  update_dataset.sh  world_data.js
docs/multilayer_SEIR_model/: multilayer_SEIR.tex
jupyter/: export_historical_data.ipynb  export_historical_data_owid.ipynb  export_historical_data_srilanka.ipynb  export_historical_data_usa.ipynb  optimal_parameters.js  plot_results.ipynb  plot_results_2layer.ipynb  plot_results_2layer_srilanka.ipynb  plot_results_2layer_usa.ipynb  plot_results_4layer.ipynb  plot_results_4layer_usa.ipynb
jupyter/csv_data/: srilanka.txt  srilanka_testing.txt  srilanka_vaccinations.txt  unitedstates.txt  unitedstates_testing.txt  unitedstates_vaccinations.txt  usa.txt  usa_testing.txt  usa_vaccinations.ods  usa_vaccinations.txt  usa_vaccinations_tests.ods
matlab_v2/: D_NODE.m  INTERMEDIATE_NODE.m  POPULATION.m  R_NODE.m  SEIR_objective_wlReg.m  START_NODE.m  S_NODE.m  create_synthetic_data.m  create_synthetic_noise_data.m  generate_country_data_CSV.m  haar_matrix.m  haargen.m  main.m  plot_optimization_results.m  plot_optimization_results_synthetic.m  plot_results.m  read_country_data.m  world_data.js
matlab_v2/csv_data/: srilanka.txt  srilanka64.txt  srilanka64_external.txt  srilanka_external.txt  synthetic1.txt  synthetic10_params.txt  synthetic1_params.txt  synthetic3.txt  synthetic4.txt  synthetic5.txt  synthetic6.txt  synthetic6_params.txt  synthetic7_params.txt  synthetic8.txt  synthetic8_params.txt  synthetic_SIR1.txt  synthetic_SIR1_params.txt  us.txt
matlab_v2/csv_data/synthetic/: synthetic1.txt  synthetic10.txt  (+9 more)
matlab_v2/figures/: synthetic_SIR1_George_linear.eps  synthetic_SIR1_George_linear_prediction.eps  synthetic_SIR1_L2_linear.eps  synthetic_SIR1_L2_linear_prediction.eps  synthetic_SIR1_MLE_linear.eps  synthetic_SIR1_MLE_linear_prediction.eps  synthetic_SIRP1_George_constant.eps  synthetic_SIRP1_George_linear.eps  synthetic_SIRP1_George_linear_prediction.eps  synthetic_SIRP1_L2_constant.eps  synthetic_SIRP1_L2_linear.eps  synthetic_SIRP1_L2_linear_prediction.eps  synthetic_SIRP1_MLE_constant.eps  synthetic_SIRP1_MLE_linear.eps  synthetic_SIRP1_MLE_linear_prediction.eps
(+50 files in other folders)
